--- a/sass/components/_index-we-do.scss
+++ b/sass/components/_index-we-do.scss
@@ -6,6 +6,9 @@
 
 .activities__section {
     display: none;
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
 }
 
 .activities__description {
