--- a/sass/components/_index-qualities.scss
+++ b/sass/components/_index-qualities.scss
@@ -9,6 +9,10 @@
     @media screen and (min-width: 768px) {
         margin-bottom: 60px;
     }
+    @media screen and (min-width: 1200px) {
+        margin-top: 94px;
+        margin-bottom: 94px;
+    }
 }
 
 .qualities__list {
@@ -46,6 +50,12 @@
             width: 354px;
         }
     }
+    @media screen and (min-width: 1200px) {
+        & li {
+            margin-bottom: 0;
+            width: 270px;
+        }
+    }
 }
 
 .qualities__card {
@@ -61,6 +71,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
     }
 }
 
