--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,9 @@ ul {
     @media screen and (min-width: 768px) {
         max-width: 768px;
     }
+    @media screen and (min-width: 1200px) {
+        max-width: 1200px;
+    }
 }
 
 .section {
