--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -30,3 +30,4 @@ $cubic-standard: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-transform: $transform;
 }
 // @media screen and (min-width: 768px)
+// @media screen and (min-width: 1200px) 
