--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -6,31 +6,44 @@
     background-position: center;
     background-repeat: no-repeat;
     max-width: 480px;
-    
     padding: 0;
     margin-left: auto;
     margin-right: auto;
     padding-top: 118px;
     padding-bottom: 118px;
+
     @media screen and (min-width: 768px) {
         max-width: 768px;
     }
-}
+    @media screen and (min-width: 1200px) {
+        max-width: 1200px;
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
 
-@media screen and (min-device-pixel-ratio: 2),
+
+    @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .hero-section {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/mobile-background-2x.jpg);
-    }
+        url(../images/mobile-background-2x.jpg);
+        @media screen and (min-width: 768px) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/tablet-background-2x.jpg);
+        }
+        @media screen and (min-width: 1200px) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url(../images/desktop-background-2x.jpg);
+        }       
+    }   
 }
-
-
 
 .hero-section__text {
     @include font-set($font-weight: 900, $font-size: 26px, $line-height: 42px, $letter-spacing: 0.06em, $transform: uppercase);
     display: block;
+    @media screen and (min-width: 1200px) {
+        @include font-set($font-weight: 900, $font-size: 44px, $line-height: 60px, $letter-spacing: 0.06em, $transform: uppercase);
+    }
 }
 
 .hero-section__button {
