--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,4 +42,7 @@ ul {
 
 .section-header {
     @include font-set ($font-size: 28px, $font-weight: 700, $line-height: 33px, $color: $main-text-color);
+    @media screen and (min-width: 1200px) {
+        @include font-set ($font-size: 36px, $font-weight: 700, $line-height: 42px, $color: $main-text-color);
+    }
 }
