--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,6 +13,7 @@ $secondary-text-color: #757575;
 $hero-bacground-color: #2F303A;
 $secondary-background-color:#F5F4FA;
 $border-color: #ECECEC;
+$text-area-color: rgba(117, 117, 117, 0.5);
 
 // Focus and Hover Animation 
 $cubic-standard: 250ms cubic-bezier(0.4, 0, 0.2, 1);
