--- a/css/main.css
+++ b/css/main.css
@@ -583,7 +583,7 @@ footer {
 @media screen and (min-width: 1200px) {
   .footer__address--mobile {
     margin-left: 0;
-    margin-right: 77px;
+    margin-right: 70px;
   }
 }
 
@@ -717,6 +717,12 @@ footer {
   margin-left: auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-networks__heading {
+    margin-left: 0;
+  }
+}
+
 .footer-network__list {
   list-style: none;
   display: -webkit-box;
@@ -803,6 +809,7 @@ footer {
     display: inline-flex;
     margin-top: 0;
     margin-left: 93px;
+    width: 570px;
   }
 }
 
@@ -839,6 +846,12 @@ footer {
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__heading {
+    margin-left: 0;
+  }
 }
 
 .footer-form__submit-button {
@@ -924,12 +937,18 @@ footer {
 
 @media screen and (min-width: 1200px) {
   #footer-form__mail {
-    width: 208px;
+    width: 358px;
   }
 }
 
 .footer-form__input-focus {
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__input-focus {
+    display: inline-block;
+  }
 }
 
 .hero-section {
@@ -1057,6 +1076,20 @@ footer {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
+}
+
 .modal__background {
   position: relative;
   display: block;
@@ -1124,6 +1157,20 @@ footer {
   margin-bottom: 12px;
 }
 
+@media screen and (min-width: 1200px) {
+  .form__heading {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-transform: none;
+  }
+}
+
 .form__field-list {
   list-style: none;
 }
@@ -1147,7 +1194,7 @@ footer {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 14px;
   text-align: left;
   letter-spacing: 0.01em;
@@ -1211,15 +1258,6 @@ footer {
 }
 
 .form__textarea {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: left;
-  letter-spacing: 0.01em;
-  color: #212121;
-  text-transform: none;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1230,6 +1268,101 @@ footer {
 
 .form__textarea:hover, .form__textarea:focus {
   border-color: #2196F3;
+}
+
+.form__textarea::-webkit-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  text-transform: none;
+}
+
+.form__textarea:-ms-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  text-transform: none;
+}
+
+.form__textarea::-ms-input-placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  text-transform: none;
+}
+
+.form__textarea::placeholder {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: left;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  text-transform: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__textarea::-webkit-input-placeholder {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    text-transform: none;
+  }
+  .form__textarea:-ms-input-placeholder {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    text-transform: none;
+  }
+  .form__textarea::-ms-input-placeholder {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    text-transform: none;
+  }
+  .form__textarea::placeholder {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    text-transform: none;
+  }
 }
 
 .form__submit-button {
@@ -1274,9 +1407,9 @@ footer {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
   letter-spacing: 0.03em;
   color: #757575;
   text-transform: none;
@@ -1290,13 +1423,27 @@ footer {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .field__gtc {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #757575;
+    text-transform: none;
+  }
+}
+
 .field__gtc--following {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  text-align: center;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
   letter-spacing: 0.03em;
   color: #2196F3;
   text-transform: none;
@@ -1304,12 +1451,26 @@ footer {
           text-decoration-line: underline;
 }
 
+@media screen and (min-width: 1200px) {
+  .field__gtc--following {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    text-transform: none;
+  }
+}
+
 #field__gtc--checking {
   display: inline-block;
   width: 16px;
   height: 15px;
   z-index: 1;
-  margin-right: 7px;
+  margin-right: 8px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -1445,6 +1606,10 @@ footer {
 @media screen and (min-width: 1200px) {
   .qualities__card {
     width: 270px;
+  }
+  .qualities__list li:hover .qualities__card {
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -1614,6 +1779,19 @@ footer {
 .team__mobile-member-image {
   display: block;
   width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .team__mobile-member-image {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__mobile-member-image {
+    width: 270px;
+  }
 }
 
 .team__card-content {
@@ -1670,6 +1848,12 @@ footer {
 
 .team__communications li:not(:last-child) {
   margin-right: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__communications {
+    margin-bottom: 30px;
+  }
 }
 
 .team__communications--referencing {
@@ -1739,7 +1923,7 @@ footer {
     margin-top: 30px;
   }
   .client li {
-    width: 29.43%;
+    width: 226px;
     margin-bottom: 30px;
   }
   .client li:nth-child(4) {
@@ -1774,8 +1958,8 @@ footer {
   height: 60px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
