--- a/sass/components/_index-qualities.scss
+++ b/sass/components/_index-qualities.scss
@@ -46,7 +46,6 @@
         align-content: center;
         & li {
             display: block;
-            // display: inline-flex;
             width: 354px;
         }
     }
@@ -74,6 +73,9 @@
     }
     @media screen and (min-width: 1200px) {
         width: 270px;
+        .qualities__list li:hover & {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
     }
 }
 
