--- a/sass/components/_index-team.scss
+++ b/sass/components/_index-team.scss
@@ -57,6 +57,13 @@
 .team__mobile-member-image {
     display: block;
     width: 100%;
+    height: auto;
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
 }
 
 
@@ -89,6 +96,9 @@
     }
     & li:not(:last-child) {
         margin-right: 10px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 30px;
     }
 }
 
