--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -25,7 +25,7 @@ footer {
     }
     @media screen and (min-width: 1200px) {
         margin-left: 0;
-        margin-right: 77px;
+        margin-right: 70px;
     }
 }
 
@@ -105,6 +105,9 @@ footer {
     display: block;
     margin-right: auto;
     margin-left: auto;
+    @media screen and (min-width: 1200px) {
+        margin-left: 0;
+    }
 }
 
 .footer-network__list {
@@ -163,6 +166,7 @@ footer {
         display: inline-flex;
         margin-top: 0;
         margin-left: 93px;
+        width: 570px;
     }
 }
 
@@ -181,6 +185,9 @@ footer {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+        margin-left: 0;
+    }
 }
 
 .footer-form__submit-button {
@@ -231,10 +238,13 @@ footer {
         border-color: $active-color;
     }
     @media screen and (min-width: 1200px) {
-        width: 208px;
+        width: 358px;
     }
 }
 
 .footer-form__input-focus {
     margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+        display: inline-block;
+    }
 }
