--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -5,18 +5,23 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 480px;
+    
     padding: 0;
     margin-left: auto;
     margin-right: auto;
     padding-top: 118px;
     padding-bottom: 118px;
 
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
+    // @media screen and (min-width: 768px) {
+    //     max-width: 768px;
+    // }
+    @media screen and (max-width: 767px) {
+        // max-width: 480px;
     }
+
+
     @media screen and (min-width: 1200px) {
-        max-width: 1200px;
+        // max-width: 1200px;
         padding-top: 200px;
         padding-bottom: 200px;
     }
