--- a/sass/components/_index-team.scss
+++ b/sass/components/_index-team.scss
@@ -7,6 +7,9 @@
         flex-direction: row;
         justify-content: space-between;
     }
+    @media screen and (min-width: 1200px) {
+        margin-top: 50px;
+    }
 }
 
 .team__background {
