--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -54,6 +54,20 @@ footer {
 
         display: inline-flex;
         & a {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        & li {
+            display: inline-block;
+            width: auto;
+        }
+    }
+
+        @media screen and (min-width: 1200px) {
+
+        display: inline-flex;
+        & a {
             display: inline-block;
         }
         & li {
