--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,13 @@ ul {
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+        display: block;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 @import "./utils/variables";
