--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -5,25 +5,26 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
     padding: 0;
     margin-left: auto;
     margin-right: auto;
     padding-top: 118px;
     padding-bottom: 118px;
-
-    // @media screen and (min-width: 768px) {
-    //     max-width: 768px;
-    // }
-    @media screen and (max-width: 767px) {
-        // max-width: 480px;
+    
+    
+    @media screen and (min-device-pixel-ratio: 1), screen and (min-width: 768px) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/tablet-background-1x.jpg);
     }
-
 
     @media screen and (min-width: 1200px) {
         // max-width: 1200px;
         padding-top: 200px;
         padding-bottom: 200px;
+    }
+    @media screen and (min-width: 1200px), screen and (min-device-pixel-ratio: 1) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/desktop-background-1x.jpg);
     }
 
 
